--- a/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
+++ b/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "text.autoconfig.fabric-tree-chopper.title": "Tree Chopper Options",
   "text.autoconfig.fabric-tree-chopper.category.default": "",
-  "text.autoconfig.fabric-tree-chopper.option.fastLeafDecay": "Fast Leaf Decay"
+  "text.autoconfig.fabric-tree-chopper.option.fastLeafDecay": "Fast Leaf Decay",
+  "text.autoconfig.fabric-tree-chopper.option.fullTreeChop": "Full Tree Chop"
 }
