--- a/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
+++ b/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
@@ -4,5 +4,6 @@
   "text.autoconfig.fabric-tree-chopper.option.fastLeafDecay": "Enable Fast Leaf Decay",
   "text.autoconfig.fabric-tree-chopper.option.treeChopMode": "Tree Chop Mode",
   "text.autoconfig.fabric-tree-chopper.option.fullChopDurabilityUsage": "Full Chop Durability Usage",
-  "text.autoconfig.fabric-tree-chopper.option.fullChopDurabilityUsage.@Tooltip": "Only effective with Tree Chop Mode \"FULL_CHOP\""
+  "text.autoconfig.fabric-tree-chopper.option.fullChopDurabilityUsage.@Tooltip": "Only effective with Tree Chop Mode \"FULL_CHOP\"",
+  "text.autoconfig.fabric-tree-chopper.option.sneakToDisable": "Disable chopping when sneaking"
 }
