--- a/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
+++ b/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
@@ -5,5 +5,6 @@
   "text.autoconfig.fabric-tree-chopper.option.treeChopMode": "Tree chop mode",
   "text.autoconfig.fabric-tree-chopper.option.fullChopDurabilityUsage": "Full chop durability usage",
   "text.autoconfig.fabric-tree-chopper.option.fullChopDurabilityUsage.@Tooltip": "Only effective with tree chop mode \"FULL_CHOP\"",
-  "text.autoconfig.fabric-tree-chopper.option.sneakToDisable": "Disable chopping when sneaking"
+  "text.autoconfig.fabric-tree-chopper.option.sneakToDisable": "Disable chopping when sneaking",
+  "text.autoconfig.fabric-tree-chopper.option.requireLeavesToChop": "Disable chopping if no natural leaves touch the logs"
 }
