Add Tooltip support and update translation keys
Tooltips don't work right now due to https://github.com/shedaniel/FiberToCloth/issues/9

--- a/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
+++ b/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
@@ -4,7 +4,7 @@
   "config.fabric-tree-chopper.fastLeafDecay": "Enable fast leaf decay",
   "config.fabric-tree-chopper.treeChopMode": "Tree chop mode",
   "config.fabric-tree-chopper.fullChopDurabilityUsage": "Full chop durability usage",
-  "config.fabric-tree-chopper.fullChopDurabilityUsage.@Tooltip": "Only effective with tree chop mode \"FULL_CHOP\"",
+  "config.fabric-tree-chopper.fullChopDurabilityUsage@Tooltip": "Only effective with tree chop mode \"FULL_CHOP\"",
   "config.fabric-tree-chopper.sneakToDisable": "Disable chopping when sneaking",
   "config.fabric-tree-chopper.requireLeavesToChop": "Disable chopping if no natural leaves touch the logs"
 }
