Add config option to prevent axe breaking
With `BREAK_MID_CHOP`, this stops chopping as if the axe broke. With `BREAK_AFTER_CHOP`, this damages the axe as much as it would have been damaged up to the point of breaking it.

--- a/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
+++ b/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
@@ -7,5 +7,6 @@
   "config.fabric-tree-chopper.fullChopDurabilityUsage@Tooltip": "Only effective with tree chop mode \"FULL_CHOP\"",
   "config.fabric-tree-chopper.sneakToDisable": "Disable chopping when sneaking",
   "config.fabric-tree-chopper.requireLeavesToChop": "Disable chopping if no natural leaves touch the logs",
-  "config.fabric-tree-chopper.logSearchLimit": "Log search limit (-1 to disable)"
+  "config.fabric-tree-chopper.logSearchLimit": "Log search limit (-1 to disable)",
+  "config.fabric-tree-chopper.stopBeforeAxeBreak": "Stop before axe break"
 }
