--- a/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
+++ b/src/main/resources/assets/fabric-tree-chopper/lang/en_us.json
@@ -8,5 +8,6 @@
   "config.fabric-tree-chopper.sneakToDisable": "Disable chopping when sneaking",
   "config.fabric-tree-chopper.requireLeavesToChop": "Disable chopping if no natural leaves touch the logs",
   "config.fabric-tree-chopper.logSearchLimit": "Log search limit (-1 to disable)",
-  "config.fabric-tree-chopper.stopBeforeAxeBreak": "Stop before axe break"
+  "config.fabric-tree-chopper.stopBeforeAxeBreak": "Stop before axe break",
+  "config.fabric-tree-chopper.axes": "Axes"
 }
